force-app/main/default/objects/Inventory_Movement__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Location.</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Inventory Movement</relationshipLabel>
    <relationshipName>Inventory_Movement</relationshipName>
    <type>Lookup</type>
</CustomField>