force-app/main/default/objects/Inventory_Movement__c/fields/minus_57s_created_time__c.field-meta.xml
<CustomField>
    <fullName>minus_57s_created_time__c</fullName>
    <defaultValue>Now()-0.00003472222222</defaultValue>
    <label>minus_57s_created_time</label>
    <type>DateTime</type>
</CustomField>