force-app/main/default/objects/Inventory_Movement__c/fields/Movement_Type__c.field-meta.xml
<CustomField>
    <fullName>Movement_Type__c</fullName>
    <label>Movement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In</fullName>
            </value>
            <value>
                <fullName>Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>