force-app/main/default/objects/Inventory_Movement__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product.</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Inventory Movement</relationshipLabel>
    <relationshipName>Inventory_Movement</relationshipName>
    <type>Lookup</type>
</CustomField>