force-app/main/default/objects/Inventory_Movement__c/fields/Source_RecordId_text__c.field-meta.xml
<CustomField>
    <fullName>Source_RecordId_text__c</fullName>
    <label>Source_RecordId_text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>