force-app/main/default/objects/Inventory_Movement__c/fields/Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Field__c</fullName>
    <label>Target Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quantity</fullName>
            </value>
            <value>
                <fullName>Locked Quantity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>