force-app/main/default/objects/Inventory_Movement__c/fields/Target_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Target_Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Inventory</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Inventory Movement</relationshipLabel>
    <relationshipName>Inventory_Movement</relationshipName>
    <type>Lookup</type>
</CustomField>