force-app/main/default/objects/Inventory_Movement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>minus_57s_created_time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>